fix: corrects z-index so navbar appears above map on story pages

--- a/public/stylesheets/views.css
+++ b/public/stylesheets/views.css
@@ -1,3 +1,9 @@
+/* ----- ViewScene Styling ----- */
+
+nav {
+  z-index: 400;
+}
+
 /* ----- ViewStory / ViewScene Styling ----- */
 
 .view-story-heading {
